kubernetes/apps/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.home.mcnees.me`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: auth
      services:
        - name: homepage
          port: 3000
  tls:
    secretName: legacy-home-wildcard-tls
